@@ -3106,6 +3106,7 @@ _process_protocol_state_set_session_privilege_level_sent (ipmiconsole_ctx_t c)
    *
    * Discovered on Sun Fire 4100.
    * Discovered on Quanta Winterfell
+   * Discovered on Wiwynn Windmill
    *
    * The Get Channel Payload Support isn't supported.  Skip this part
    * of the state machine and pray for the best I guess.
