@@ -35,4 +35,4 @@ verifying the validity of a packet.  However, in most organizations,
 this is unlikely to be a security issue.  Those hitting this issue may
 see "connection timeout", "session timeout", or "password verification
 timeout" errors.  Issue observed on Xyratex FB-H8-SRAY, Quanta
-Winterfell.
+Winterfell, Wiwynn Windmill.
